[package]
name = "os-locale"
version = "0.1.0"
authors = [ "i509VCB <git@i509.me>" ]
edition = "2018"
description = """
A small library to obtain the current locale.
"""

# Platform dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [ "minwindef", "winnls", "winnt" ] } # WORD, winnls.h, LANGID
libc = "0.2.82" # wcslen

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"
