[package]
name = "current_locale"
version = "0.1.1"
authors = [ "i509VCB <git@i509.me>" ]
edition = "2018"
description = """
A library to get the user's current locale.
"""
homepage = "https://github.com/i509VCB/current_locale"
repository = "https://github.com/i509VCB/current_locale"
documentation = "https://docs.rs/current_locale"
readme = "README.md"
license  = "MIT OR Apache-2.0"
keywords = [ "localization", "locale" ]
categories = [ "internationalization", "localization" ]

# Platform dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [ "minwindef", "winnls", "winnt" ] } # WORD, winnls.h, LANGID
libc = "0.2.82" # wcslen

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = "0.2.7"
objc-foundation = "0.1.1"
